Bug 187346 - managing the layer stack with the stylus is cumbersome
Summary: managing the layer stack with the stylus is cumbersome
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: pentalis
URL:
Keywords:
: 210012 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-16 23:29 UTC by Elián Hanisch
Modified: 2011-08-12 09:47 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
using the stylus (906.28 KB, video/mpeg)
2009-03-17 15:21 UTC, Elián Hanisch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elián Hanisch 2009-03-16 23:29:31 UTC
Version:           2.0 beta-7 (using 4.2.00 (KDE 4.2.0), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.27-11-generic

very often if you want to change a layer's attribute with the stylus (like changing the visibility, the lock or rename the layer) the stylus cursor will try to drag the layer and might change stacking order when this wasn't your intention, this doesn't happen if I use a mouse.

to reproduce just change the visibility of one layer with the stylus, you will notice how the layer box is grabbed for a short while.
Comment 1 Elián Hanisch 2009-03-16 23:31:48 UTC
gah, I filled wrong the form, this should assigned to krita, not kchart.
Comment 2 Elián Hanisch 2009-03-17 15:21:10 UTC
Created attachment 32195 [details]
using the stylus

I made a recording of this, there's also a lot of flickering with the dockers when I poke the layer stack or the opacity control. 
At the start of the video I'm using the mouse without problems at all, then I switch to the stylus.
Comment 3 enkithan 2009-04-11 20:02:42 UTC
I get the same bug, layers get dragged when I click button/text box though not as much as on the video.
I think there is two problems in that bug: 
- The layer is dragged even when the cursor move of just one pixel, or a very small amount of time.
- Widgets in the layer box do two actions, their own action and select/drag.
I think only the area under the text box and the preview image should be used to select or drag.

About the 2nd bug, I can't reproduce the flickering, it's smooth here.
Comment 4 Elián Hanisch 2009-04-11 20:15:38 UTC
yes, wanted to report a bug for the flickering but I couldn't reproduce it accurately, only when I recorded the video and some other random times.

This report is about the layer dragging with the stylus
Comment 5 Cyrille Berger 2009-04-12 11:09:23 UTC
I fear it's a bug in Qt, but I haven't had the opportunity to test with an other application (the best would be to able to reproduce with one of the example of Qt)
Comment 6 Cyrille Berger 2009-04-26 08:55:08 UTC
Sound like it's more general: http://bbs.archlinux.org/viewtopic.php?pid=542387 , it should probably be reported to Qt.
Comment 7 Halla Rempt 2009-10-17 17:00:17 UTC
*** Bug 210012 has been marked as a duplicate of this bug. ***
Comment 8 Halla Rempt 2009-10-29 11:19:27 UTC
Maybe resolve the same way as 166441?
Comment 9 Cyrille Berger 2009-10-29 12:32:05 UTC
A work around would be to disable drag and drop only for tablet events.
Comment 10 Cyrille Berger 2010-03-03 10:51:24 UTC
I think with my latest commits in koffice/libs it is much more pleasant, if it is still problematic we can raise QApplication::setStartDragDistance to 10 or 20.
Comment 11 Adam C 2010-04-11 02:53:06 UTC
I think, we can close this bug, can we?
Comment 12 Cyrille Berger 2010-04-11 07:28:22 UTC
No we can't :( After more testing, it is still problematic.
Comment 13 Halla Rempt 2011-05-26 21:08:59 UTC
Pentalis wants to give this a try.
Comment 14 pentalis 2011-07-06 09:22:32 UTC
Git commit 594f073cb2a68c41f57872c9792e2c6ab7c58194 by José Luis Vergara.
Committed on 06/07/2011 at 11:10.
Pushed by jlvergara into branch 'master'.

Handle the start of a drag event in KoDocumentSectionView to bypass a bug in QTreeView

BUG:187346

M  +10   -0    libs/main/KoDocumentSectionView.cpp     

http://commits.kde.org/calligra/594f073cb2a68c41f57872c9792e2c6ab7c58194
Comment 15 Jean-Nicolas Artaud 2011-08-12 09:47:21 UTC
Git commit 1246f31979d417af39728fcd6369ab82ca82940e by Jean-Nicolas Artaud, on behalf of José Luis Vergara.
Committed on 06/07/2011 at 11:10.
Pushed by artaud into branch 'marker-zachmann'.

Handle the start of a drag event in KoDocumentSectionView to bypass a bug in QTreeView

BUG:187346

M  +10   -0    libs/main/KoDocumentSectionView.cpp

http://commits.kde.org/calligra/1246f31979d417af39728fcd6369ab82ca82940e