Handle the start of a drag event in KoDocumentSectionView to bypass a bug in QTreeView

BUG:187346